# deepagents-gigachat

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deepagents_gigachat/: __init__.py  harness_profile.py  orchestrator.py  pi_tools.py  prompts.py  routing.py  runtime.py
examples/: README.md  basic_agent.py  routed_workspace.py
harness_bench/: COLLEAGUE_TESTING.md  README.md  __init__.py  __main__.py  core.py  runner.py  runner_cli.py  runner_direct.py  runner_openai.py  runner_openrouter.py  runner_pure.py  runner_router.py  tasks.py  tasks_diagnostic.py  tasks_extra.py  tasks_extreme.py  tasks_hard.py  tasks_more.py  verifiers.py
tests/: test_harness_profile.py  test_orchestrator.py  test_pi_tools.py  test_routing.py  test_runner_direct.py  test_runner_retries.py  test_runner_router.py  test_runtime.py
